welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
  b=test()
        ^SnakeBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
    b=test()
          ^SnakeBuggle:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:32: warning: enclosing method test has result type Unit: return value discarded
        return true
        ^SnakeBuggle:39: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:39: warning: enclosing method test has result type Unit: return value discarded
        return true
        ^SnakeBuggle:43: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:43: warning: enclosing method test has result type Unit: return value discarded
  return false
  ^